5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1585_2905.log
== TEST (2019-03-24 12:06:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
la=float(input("insira o lado a: "))
lb=float(input("insira o lado b: "))
lc-float(input("insira o lado c: "))
from math import*
rz=sqtz()
print (rz*la)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    lc-float(input())
NameError: name 'lc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:06:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
la=float(input("insira o lado a: "))
lb=float(input("insira o lado b: "))
lc=float(input("insira o lado c: "))
from math import*
rz=sqtz()
print (rz*la)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    rz=sqtz()
NameError: name 'sqtz' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:08:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
la=float(input("insira o lado a: "))
lb=float(input("insira o lado b: "))
lc=float(input("insira o lado c: "))
s=(la+lb+lc)/2
a=s(s-la)*(s-lb)*(s-lc)

from math import*
rz=sqtz()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    a=s(s-la)*(s-lb)*(s-lc)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:09:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
la=float(input("insira o lado a: "))
lb=float(input("insira o lado b: "))
lc=float(input("insira o lado c: "))
s=(la+lb+lc)/2
a=s*(s-la)*(s-lb)*(s-lc)
from math import*
rz=sqtz(a)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    rz=sqtz(a)
NameError: name 'sqtz' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:10:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
la=float(input("insira o lado a: "))
lb=float(input("insira o lado b: "))
lc=float(input("insira o lado c: "))
s=(la+lb+lc)/2
a=s*(s-la)*(s-lb)*(s-lc)
from math import*
rz=sqtz(a,2)
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    rz=sqtz(a,2)
NameError: name 'sqtz' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:10:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
la=float(input("insira o lado a: "))
lb=float(input("insira o lado b: "))
lc=float(input("insira o lado c: "))
s=(la+lb+lc)/2
a=s*(s-la)*(s-lb)*(s-lc)
from math import*
rz=sqrt(a)
print(a)

-- OUTPUT:
4819.091243750005
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:10:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
la=float(input("insira o lado a: "))
lb=float(input("insira o lado b: "))
lc=float(input("insira o lado c: "))
s=(la+lb+lc)/2
a=s*(s-la)*(s-lb)*(s-lc)
from math import*
rz=sqrt(a)
print(rz)

-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:10:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
la=float(input("insira o lado a: "))
lb=float(input("insira o lado b: "))
lc=float(input("insira o lado c: "))
s=(la+lb+lc)/2
a=s*(s-la)*(s-lb)*(s-lc)
from math import*
rz=sqrt(a)
print(rz)

-- EXECUTION TIME:
0.155209
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967475975385
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.1665442616423
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:13:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
la=float(input("insira o lado a: "))
lb=float(input("insira o lado b: "))
lc=float(input("insira o lado c: "))
s=(la+lb+lc)/2
a=s*(s-la)*(s-lb)*(s-lc)
from math import*
rz=sqrt(a)
print(round(rz,5))

-- EXECUTION TIME:
0.182376
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
